# aoc-2024

./: pyproject.toml  readme.md
.devcontainer/: devcontainer.json
day01/: solution.py  solution_test.py  test.py
day02/: solution.py  solution_test.py
day03/: man.txt  regex.txt  solution.py  solution_test.py
day04/: solution.py  solution_test.py
