[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-2024"
dynamic = ["version"]

[tool.coverage.run]
source = ["/"]
omit = ["*_test.py"]

[tool.coverage.report]
skip_empty = true

[tool.flake8]
max-line-length = "88"
extend-ignore = "E203"

[tool.pylint]
good-names = "_,a,b,c,d,e,f,g,h,i,j,k,m,n,o,p,q,r,s,t,u,v,w,x,y,z,op,val,arr,el,elm,id,ix"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true

[tool.setuptools]
include-package-data = false
